--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "illuminate/database": "5.5.*"
     },
     "require-dev": {
+        "fzaninotto/faker": "~1.4",
         "laravel/laravel": "5.5.*",
         "mockery/mockery": "0.9.*",
         "phpmd/phpmd": "^2.6",
@@ -22,6 +23,9 @@
         "sebastian/phpcpd": "*"
     },
     "autoload": {
+        "classmap": [
+            "tests/database/factories"
+        ],
         "psr-4": {
             "GeneaLabs\\LaravelModelCaching\\": "src/",
             "GeneaLabs\\LaravelModelCaching\\Tests\\": "tests/"
