Sepatate tests autoload to autoload-dev

--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,15 @@
         "sebastian/phpcpd": "*"
     },
     "autoload": {
+        "psr-4": {
+            "GeneaLabs\\LaravelModelCaching\\": "src/"
+        }
+    },
+    "autoload-dev": {
         "classmap": [
             "tests/database/factories"
         ],
         "psr-4": {
-            "GeneaLabs\\LaravelModelCaching\\": "src/",
             "GeneaLabs\\LaravelModelCaching\\Tests\\": "tests/"
         }
     }
