--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0",
         "illuminate/cache": "5.5.*",
-        "illuminate/database": "5.5.*"
+        "illuminate/database": "5.5.*",
+        "php": ">=7.0.0"
     },
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.4.4",
@@ -20,7 +20,7 @@
         "mockery/mockery": "0.9.*",
         "phpmd/phpmd": "^2.6",
         "phpunit/phpunit": "5.7.*",
-        "satooshi/php-coveralls" : "*",
+        "php-coveralls/php-coveralls" : "*",
         "sebastian/phpcpd": "*"
     },
     "autoload": {
@@ -34,6 +34,13 @@
         ],
         "psr-4": {
             "GeneaLabs\\LaravelModelCaching\\Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "GeneaLabs\\LaravelModelCaching\\Providers\\Service"
+            ]
         }
     }
 }
