--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         }
     ],
     "require": {
-        "illuminate/cache": "5.6.*",
-        "illuminate/database": "5.6.*",
+        "illuminate/cache": "5.5 - 5.6",
+        "illuminate/database": "5.5 - 5.6",
         "php": ">=7.1.3"
     },
     "require-dev": {
