--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,3 +1,9 @@
 filter:
     excluded_paths:
         - "tests/"
+build:
+    environment:
+        variables:
+            REDIS_HOST: '127.0.0.1'
+    nodes:
+        tests: false
