--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,10 @@
     ],
     "require": {
         "illuminate/cache": "5.5 - 5.6",
+        "illuminate/config": "5.5 - 5.6",
+        "illuminate/console": "5.5 - 5.6",
         "illuminate/database": "5.5 - 5.6",
+        "illuminate/support": "5.5 - 5.6",
         "php": ">=7.1.3"
     },
     "require-dev": {
@@ -18,8 +21,6 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "orchestra/database": "3.6.x-dev@dev",
-        "orchestra/testbench-browser-kit": "^3.6",
-        "orchestra/testbench-dusk": "3.6.x-dev@dev",
         "orchestra/testbench": "^3.6",
         "php-coveralls/php-coveralls" : "*",
         "phpmd/phpmd": "*",
