--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "illuminate/console": "5.5 - 5.6",
         "illuminate/database": "5.5 - 5.6",
         "illuminate/support": "5.5 - 5.6",
-        "php": ">=7.1.3"
+        "php": ">=7.1.3",
+        "fico7489/laravel-pivot": "^2.2"
     },
     "require-dev": {
         "codedungeon/phpunit-result-printer": "*",
