--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     ],
     "require": {
+        "fico7489/laravel-pivot": "*",
         "illuminate/cache": "5.5 - 5.6",
         "illuminate/config": "5.5 - 5.6",
         "illuminate/console": "5.5 - 5.6",
         "illuminate/database": "5.5 - 5.6",
         "illuminate/support": "5.5 - 5.6",
-        "php": ">=7.1.3",
-        "fico7489/laravel-pivot": "^2.2"
+        "php": ">=7.1.3"
     },
     "require-dev": {
         "codedungeon/phpunit-result-printer": "*",
