--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,28 @@
 language: php
 
 env:
-    -REDIS_HOST=127.0.0.1
+    - REDIS_HOST=127.0.0.1
+    - ILLUMINATE_VERSION=5.6.*
+    - ORCHESTRA_VERSION=3.6.*
 
-php:
-    - 7.1.3
-    - 7.2
+matrix:
+    include:
+        - php: 7.1.3
+        - env:
+            - ILLUMINATE_VERSION=5.5.*
+            - ORCHESTRA_VERSION=3.5.*
+        - php: 7.1.3
+        - env:
+            - ILLUMINATE_VERSION=5.4.*
+            - ORCHESTRA_VERSION=3.4.*
+        - php: 7.2
+        - env:
+            - ILLUMINATE_VERSION=5.5.*
+            - ORCHESTRA_VERSION=3.5.*
+        - php: 7.2
+        - env:
+            - ILLUMINATE_VERSION=5.4.*
+            - ORCHESTRA_VERSION=3.4.*
 
 services:
     - redis-server
@@ -17,6 +34,19 @@ before_script:
 script:
     - mkdir -p ./build/logs
     - ./vendor/bin/phpunit --coverage-text --coverage-clover ./build/logs/clover.xml
+
+before_install:
+    - composer require "orchestra/database:${ORCHESTRA_VERSION}" --no-update
+    - composer require "orchestra/testbench:${ORCHESTRA_VERSION}" --no-update
+    - composer require "orchestra/testbench:${ORCHESTRA_VERSION}- --no-update
+    - composer require "illuminate/cache:${ILLUMINATE_VERSION}" --no-update
+    - composer require "illuminate/config:${ILLUMINATE_VERSION}" --no-update
+    - composer require "illuminate/console:${ILLUMINATE_VERSION}" --no-update
+    - composer require "illuminate/database:${ILLUMINATE_VERSION}" --no-update
+    - composer require "illuminate/support:${ILLUMINATE_VERSION}" --no-update
+
+install:
+    - composer update --prefer-source --no-interaction --dev
 
 after_success:
     - travis_retry php vendor/bin/php-coveralls -v
