--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,9 @@ env:
 matrix:
     include:
         - php: 7.1.3
-        - env:
-            - ILLUMINATE_VERSION=5.5.*
-            - ORCHESTRA_VERSION=3.5.*
+          env: ILLUMINATE_VERSION=5.5.* ORCHESTRA_VERSION=3.5.*
         - php: 7.1.3
-        - env:
+          env:
             - ILLUMINATE_VERSION=5.4.*
             - ORCHESTRA_VERSION=3.4.*
         - php: 7.2
