--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,26 @@ env:
     - ILLUMINATE_VERSION=5.6.*
     - ORCHESTRA_VERSION=3.6.*
 
+php:
+    - 7.1.3
+    - 7.2
+
 matrix:
     include:
         - php: 7.1.3
-          env: ILLUMINATE_VERSION=5.5.* ORCHESTRA_VERSION=3.5.*
+          env:
+            - ILLUMINATE_VERSION=5.5.*
+            - ORCHESTRA_VERSION=3.5.*
         - php: 7.1.3
           env:
             - ILLUMINATE_VERSION=5.4.*
             - ORCHESTRA_VERSION=3.4.*
         - php: 7.2
-        - env:
+          env:
             - ILLUMINATE_VERSION=5.5.*
             - ORCHESTRA_VERSION=3.5.*
         - php: 7.2
-        - env:
+          env:
             - ILLUMINATE_VERSION=5.4.*
             - ORCHESTRA_VERSION=3.4.*
 
