--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: php
 
-env:
-    - REDIS_HOST=127.0.0.1
-    - ILLUMINATE_VERSION=5.6.*
-    - ORCHESTRA_VERSION=3.6.*
+env: REDIS_HOST=127.0.0.1 ILLUMINATE_VERSION=5.6.* ORCHESTRA_VERSION=3.6.*
 
 php:
     - 7.1.3
