--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ script:
 before_install:
     - composer require "orchestra/database:${ORCHESTRA_VERSION}" --no-update
     - composer require "orchestra/testbench:${ORCHESTRA_VERSION}" --no-update
-    - composer require "orchestra/testbench:${ORCHESTRA_VERSION}" --no-update
+    - composer require "orchestra/testbench-browser-kit:${ORCHESTRA_VERSION}" --no-update
     - composer require "illuminate/cache:${ILLUMINATE_VERSION}" --no-update
     - composer require "illuminate/config:${ILLUMINATE_VERSION}" --no-update
     - composer require "illuminate/console:${ILLUMINATE_VERSION}" --no-update
@@ -47,7 +47,7 @@ before_install:
     - composer require "illuminate/support:${ILLUMINATE_VERSION}" --no-update
 
 install:
-    - composer update --prefer-source --no-interaction --dev
+    - composer update --prefer-source --no-interaction
 
 after_success:
     - travis_retry php vendor/bin/php-coveralls -v
