--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: php
 
-env: ILLUMINATE_VERSION=5.6.* ORCHESTRA_VERSION=3.6.* REDIS_HOST=127.0.0.1
+env: ILLUMINATE_VERSION=5.6.* ORCHESTRA_VERSION=3.6.* PHPUNIT_VERSION=^7.0 REDIS_HOST=127.0.0.1
 
 php:
     - 7.1.3
@@ -9,13 +9,13 @@ php:
 matrix:
     include:
         - php: 7.1.3
-          env: ILLUMINATE_VERSION=5.5.* ORCHESTRA_VERSION=3.5.* REDIS_HOST=127.0.0.1
+          env: ILLUMINATE_VERSION=5.5.* ORCHESTRA_VERSION=3.5.* PHPUNIT_VERSION=~6.0 REDIS_HOST=127.0.0.1
         - php: 7.1.3
-          env: ILLUMINATE_VERSION=5.4.* ORCHESTRA_VERSION=3.4.* REDIS_HOST=127.0.0.1
+          env: ILLUMINATE_VERSION=5.4.* ORCHESTRA_VERSION=3.4.* PHPUNIT_VERSION=~5.7 REDIS_HOST=127.0.0.1
         - php: 7.2
-          env: ILLUMINATE_VERSION=5.5.* ORCHESTRA_VERSION=3.5.* REDIS_HOST=127.0.0.1
+          env: ILLUMINATE_VERSION=5.5.* ORCHESTRA_VERSION=3.5.* PHPUNIT_VERSION=~6.0 REDIS_HOST=127.0.0.1
         - php: 7.2
-          env: ILLUMINATE_VERSION=5.4.* ORCHESTRA_VERSION=3.4.* REDIS_HOST=127.0.0.1
+          env: ILLUMINATE_VERSION=5.4.* ORCHESTRA_VERSION=3.4.* PHPUNIT_VERSION=~5.7 REDIS_HOST=127.0.0.1
 
 services:
     - redis-server
@@ -29,14 +29,15 @@ script:
     - ./vendor/bin/phpunit --coverage-text --coverage-clover ./build/logs/clover.xml
 
 before_install:
-    - composer require "orchestra/database:${ORCHESTRA_VERSION}" --no-update
-    - composer require "orchestra/testbench:${ORCHESTRA_VERSION}" --no-update
-    - composer require "orchestra/testbench-browser-kit:${ORCHESTRA_VERSION}" --no-update
+    - composer require "orchestra/database:${ORCHESTRA_VERSION}" --no-update --dev
+    - composer require "orchestra/testbench:${ORCHESTRA_VERSION}" --no-update --dev
+    - composer require "orchestra/testbench-browser-kit:${ORCHESTRA_VERSION}" --no-update --dev
     - composer require "illuminate/cache:${ILLUMINATE_VERSION}" --no-update
     - composer require "illuminate/config:${ILLUMINATE_VERSION}" --no-update
     - composer require "illuminate/console:${ILLUMINATE_VERSION}" --no-update
     - composer require "illuminate/database:${ILLUMINATE_VERSION}" --no-update
     - composer require "illuminate/support:${ILLUMINATE_VERSION}" --no-update
+    - composer require "phpunit/phpunit:${PHPUNIT_VERSION}" --no-update --dev
 
 install:
     - composer update --prefer-source --no-interaction
