--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,15 @@
 language: php
 
-env: ILLUMINATE_VERSION=5.6.* ORCHESTRA_VERSION=3.6.* PHPUNIT_VERSION=^7.0 REDIS_HOST=127.0.0.1
-
-php:
-    - 7.1.3
-    - 7.2
-
 matrix:
     include:
+        - php: 7.1.3
+          env: ILLUMINATE_VERSION=5.6.* ORCHESTRA_VERSION=3.6.* PHPUNIT_VERSION=^7.0 REDIS_HOST=127.0.0.1
         - php: 7.1.3
           env: ILLUMINATE_VERSION=5.5.* ORCHESTRA_VERSION=3.5.* PHPUNIT_VERSION=~6.0 REDIS_HOST=127.0.0.1
         - php: 7.1.3
           env: ILLUMINATE_VERSION=5.4.* ORCHESTRA_VERSION=3.4.* PHPUNIT_VERSION=~5.7 REDIS_HOST=127.0.0.1
+        - php: 7.2
+          env: ILLUMINATE_VERSION=5.6.* ORCHESTRA_VERSION=3.6.* PHPUNIT_VERSION=^7.0 REDIS_HOST=127.0.0.1
         - php: 7.2
           env: ILLUMINATE_VERSION=5.5.* ORCHESTRA_VERSION=3.5.* PHPUNIT_VERSION=~6.0 REDIS_HOST=127.0.0.1
         - php: 7.2
