--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
     - ./vendor/bin/phpunit --coverage-text --coverage-clover ./build/logs/clover.xml
 
 before_install:
+    - composer remove codedungeon/phpunit-result-printer --no-update
     - composer require "orchestra/database:${ORCHESTRA_VERSION}" --no-update --dev
     - composer require "orchestra/testbench:${ORCHESTRA_VERSION}" --no-update --dev
     - composer require "orchestra/testbench-browser-kit:${ORCHESTRA_VERSION}" --no-update --dev
