--- a/composer.json
+++ b/composer.json
@@ -10,26 +10,26 @@
     ],
     "require": {
         "fico7489/laravel-pivot": "*",
-        "illuminate/cache": "5.5 - 5.6",
-        "illuminate/config": "5.5 - 5.6",
-        "illuminate/console": "5.5 - 5.6",
-        "illuminate/database": "5.5 - 5.6",
-        "illuminate/support": "5.5 - 5.6",
+        "illuminate/cache": "5.6.*",
+        "illuminate/config": "5.6.*",
+        "illuminate/console": "5.6.*",
+        "illuminate/database": "5.6.*",
+        "illuminate/support": "5.6.*",
         "php": ">=7.1.3"
     },
     "require-dev": {
-        "codedungeon/phpunit-result-printer": "*",
         "fzaninotto/faker": "*",
         "mockery/mockery": "*",
-        "orchestra/database": "^3.6",
-        "orchestra/testbench": "^3.6",
-        "orchestra/testbench-browser-kit": "^3.6",
+        "orchestra/database": "3.6.*",
+        "orchestra/testbench": "3.6.*",
+        "orchestra/testbench-browser-kit": "3.6.*",
         "php-coveralls/php-coveralls" : "*",
         "phpmd/phpmd": "*",
-        "phpunit/phpunit": "*",
+        "phpunit/phpunit": "7.*",
         "sebastian/phpcpd": "*",
         "symfony/thanks": "*",
-        "predis/predis": "*"
+        "predis/predis": "*",
+        "codedungeon/phpunit-result-printer": "^0.19.10"
     },
     "autoload": {
         "psr-4": {
