--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
     - travis_retry chmod +x *.sh
 
 script:
-    - travis_retry ./phpunit-${PU_FILE}.sh
+    - travis_retry ./pu-${PU_FILE}.sh
 
 after_success:
     - travis_retry php vendor/bin/php-coveralls -v
