--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     ],
     "require": {
         "fico7489/laravel-pivot": "*",
-        "illuminate/cache": "5.6.*",
-        "illuminate/config": "5.6.*",
-        "illuminate/console": "5.6.*",
-        "illuminate/database": "5.6.*",
-        "illuminate/support": "5.6.*",
+        "illuminate/cache": "5.4 - 5.6",
+        "illuminate/config": "5.4 - 5.6",
+        "illuminate/console": "5.4 - 5.6",
+        "illuminate/database": "5.4 - 5.6",
+        "illuminate/support": "5.4 - 5.6",
         "php": ">=7.1.3"
     },
     "require-dev": {
@@ -29,7 +29,7 @@
         "sebastian/phpcpd": "*",
         "symfony/thanks": "*",
         "predis/predis": "*",
-        "codedungeon/phpunit-result-printer": "^0.19.10"
+        "codedungeon/phpunit-result-printer": "*"
     },
     "autoload": {
         "psr-4": {
