--- a/.gitattributes
+++ b/.gitattributes
@@ -5,5 +5,8 @@
 /.gitignore export-ignore
 /.scrutinizer.yml export-ignore
 /.travis.yml export-ignore
+/build
+/composer.lock
 /phpunit.xml export-ignore
 /tests export-ignore
+/vendor
