--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "sebastian/phpcpd": "*",
         "symfony/thanks": "*",
         "predis/predis": "*",
-        "codedungeon/phpunit-result-printer": "*"
+        "codedungeon/phpunit-result-printer": "^0.19.10"
     },
     "autoload": {
         "psr-4": {
