--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
         "codedungeon/phpunit-result-printer": "*",
         "fzaninotto/faker": "*",
         "mockery/mockery": "*",
-        "orchestra/database": "3.6.*",
-        "orchestra/testbench-browser-kit": "3.6.*",
-        "orchestra/testbench": "3.6.*",
+        "orchestra/database": "3.7.x-dev",
+        "orchestra/testbench-browser-kit": "3.7.x-dev",
+        "orchestra/testbench": "3.7.*",
         "php-coveralls/php-coveralls" : "*",
         "phpmd/phpmd": "*",
         "phpunit/phpunit": "7.*",
