--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ language: php
 matrix:
     include:
         - php: 7.1.3
+          env: PU_FILE=57 REDIS_HOST=127.0.0.1
+        - php: 7.1.3
           env: PU_FILE=56 REDIS_HOST=127.0.0.1
         - php: 7.1.3
           env: PU_FILE=55 REDIS_HOST=127.0.0.1
         - php: 7.1.3
           env: PU_FILE=54 REDIS_HOST=127.0.0.1
+        - php: 7.2
+          env: PU_FILE=57 REDIS_HOST=127.0.0.1
         - php: 7.2
           env: PU_FILE=56 REDIS_HOST=127.0.0.1
         - php: 7.2
