--- a/composer.json
+++ b/composer.json
@@ -18,11 +18,10 @@
         "php": ">=7.1.3"
     },
     "require-dev": {
-        "codedungeon/phpunit-result-printer": "*",
         "fzaninotto/faker": "*",
         "mockery/mockery": "*",
-        "orchestra/database": "3.7.x-dev",
-        "orchestra/testbench-browser-kit": "3.7.x-dev",
+        "orchestra/database": "3.7.x-dev@dev",
+        "orchestra/testbench-browser-kit": "3.7.*",
         "orchestra/testbench": "3.7.*",
         "php-coveralls/php-coveralls" : "*",
         "phpmd/phpmd": "*",
