--- a/.gitattributes
+++ b/.gitattributes
@@ -7,6 +7,7 @@
 /.travis.yml export-ignore
 /build
 /composer.lock
+/database.yml export-ignore
 /phpunit.xml export-ignore
 /tests export-ignore
 /vendor
