--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: php
 
+services:
+    - postgresql
+
 matrix:
     include:
         - php: 7.1.3
@@ -26,6 +29,7 @@ before_script:
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source
     - chmod +x tests/*.sh
+    - psql -c 'create database testing;' -U postgres
 
 script:
     - ./tests/pu-${PU_FILE}.sh
