--- a/composer.json
+++ b/composer.json
@@ -10,26 +10,25 @@
     ],
     "require": {
         "fico7489/laravel-pivot": "3.*",
-        "illuminate/cache": "5.4 - 5.7",
-        "illuminate/config": "5.4 - 5.7",
-        "illuminate/console": "5.4 - 5.7",
-        "illuminate/database": "5.4 - 5.7",
-        "illuminate/support": "5.4 - 5.7",
-        "php": ">=7.1.3"
+        "illuminate/cache": "5.4 - 5.8",
+        "illuminate/config": "5.4 - 5.8",
+        "illuminate/console": "5.4 - 5.8",
+        "illuminate/database": "5.4 - 5.8",
+        "illuminate/support": "5.4 - 5.8",
+        "php": "^7.1.3"
     },
     "require-dev": {
         "fzaninotto/faker": "*",
         "mockery/mockery": "*",
-        "orchestra/database": "3.7.x-dev@dev",
-        "orchestra/testbench-browser-kit": "3.7.*",
-        "orchestra/testbench": "3.7.*",
+        "orchestra/database": "3.8.x-dev@dev",
+        "orchestra/testbench-browser-kit": "3.8.*",
+        "orchestra/testbench": "3.8.*",
         "php-coveralls/php-coveralls" : "*",
         "phpmd/phpmd": "*",
-        "phpunit/phpunit": "7.*",
+        "phpunit/phpunit": "^7.5",
         "predis/predis": "*",
         "sebastian/phpcpd": "*",
-        "symfony/thanks": "*",
-        "codedungeon/phpunit-result-printer": "^0.23.4"
+        "symfony/thanks": "*"
     },
     "autoload": {
         "psr-4": {
