--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
     ],
     "require": {
         "fico7489/laravel-pivot": "3.*",
-        "illuminate/cache": "5.4 - 5.8",
-        "illuminate/config": "5.4 - 5.8",
-        "illuminate/console": "5.4 - 5.8",
-        "illuminate/database": "5.4 - 5.8",
-        "illuminate/support": "5.4 - 5.8",
+        "illuminate/cache": "5.8",
+        "illuminate/config": "5.8",
+        "illuminate/console": "5.8",
+        "illuminate/database": "5.8",
+        "illuminate/support": "5.8",
         "php": "^7.1.3"
     },
     "require-dev": {
