--- a/.travis.yml
+++ b/.travis.yml
@@ -11,26 +11,23 @@ addons:
 
 env:
   global:
-    - PGPORT=5433
+    - REDIS_HOST=127.0.0.1
 
 matrix:
-    include:
-        - php: 7.1.3
-          env: REDIS_HOST=127.0.0.1
-        - php: 7.2
-          env: REDIS_HOST=127.0.0.1
-        - php: 7.3
-          env: REDIS_HOST=127.0.0.1
+  include:
+    - php: 7.1.3
+    - php: 7.2
+    - php: 7.3
 
 before_script:
-    - travis_retry composer self-update
-    - travis_retry composer config --global github-protocols https
-    - travis_retry composer install --no-interaction --prefer-source
-    - psql -c 'create database testing;' -U postgres
-    - psql -c "CREATE USER homestead WITH PASSWORD 'secret';" -U postgres
+  - travis_retry composer self-update
+  - travis_retry composer config --global github-protocols https
+  - travis_retry composer install --no-interaction --prefer-source
+  - psql -c 'create database testing;' -U postgres
+  - psql -c "CREATE USER homestead WITH PASSWORD 'secret';" -U postgres
 
 after_success:
-    - travis_retry php vendor/bin/php-coveralls -v
+  - travis_retry php vendor/bin/php-coveralls -v
 
 notifications:
   webhooks:
