--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,8 @@ before_script:
   - travis_retry composer self-update
   - travis_retry composer config --global github-protocols https
   - travis_retry composer install --no-interaction --prefer-source
-  - psql -c 'create database testing;' -U postgres
+  - psql -c "CREATE DATABASE testing_db;" -U postgres
+  - psql -c "CREATE USER foo WITH PASSWORD 'bar';" -U postgres
 
 after_success:
   - travis_retry php vendor/bin/php-coveralls -v
