--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ addons:
 env:
   global:
     - REDIS_HOST=127.0.0.1
+    - DB_HOST=127.0.0.1
 
 matrix:
   include:
@@ -24,7 +25,7 @@ before_script:
   - travis_retry composer config --global github-protocols https
   - travis_retry composer install --no-interaction --prefer-source
   - psql -c "CREATE DATABASE testing_db;" -U postgres
-  - psql -c "CREATE USER foo WITH PASSWORD 'bar';" -U postgres
+  - psql -c "CREATE USER homestead WITH PASSWORD 'secret';" -U postgres
 
 after_success:
   - travis_retry php vendor/bin/php-coveralls -v
