--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_script:
   - travis_retry composer self-update
   - travis_retry composer config --global github-protocols https
   - travis_retry composer install --no-interaction --prefer-source
-  - psql -c "CREATE DATABASE testing_db;" -U postgres
+  - psql -c "CREATE DATABASE testing;" -U postgres
   - psql -c "CREATE USER homestead WITH PASSWORD 'secret';" -U postgres
 
 after_success:
