--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,10 @@ before_script:
   - psql -c "CREATE DATABASE testing;" -U postgres
   - psql -c "CREATE USER homestead WITH PASSWORD 'secret';" -U postgres
 
+script:
+  - mkdir -p build/logs
+  - php vendor/bin/phpunit -c phpunit.xml
+
 after_success:
   - travis_retry php vendor/bin/php-coveralls -v
 
