--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_script:
 
 script:
   - mkdir -p build/logs
-  - php vendor/bin/phpunit -c phpunit.xml --coverage-clover build/logs/clover.xml
+  - php vendor/bin/phpunit -c phpunit.xml
 
 after_success:
   - travis_retry php vendor/bin/php-coveralls -v
