--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /build
 /vendor
 composer.lock
-tests/database/baseline.sqlite
-tests/database/testing.sqlite
+/tests/database/baseline.sqlite
+/tests/database/testing.sqlite
