--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,10 @@
         "illuminate/cache": "5.8.*",
         "illuminate/config": "5.8.*",
         "illuminate/console": "5.8.*",
+        "illuminate/container": "5.8.*",
         "illuminate/database": "5.8.*",
         "illuminate/support": "5.8.*",
+        "illuminate/http": "5.8.*",
         "php": "^7.1.3"
     },
     "require-dev": {
