--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ before_script:
   - travis_retry composer config --global github-protocols https
   - travis_retry composer install --no-interaction --prefer-source
   - psql -c "CREATE DATABASE testing;" -U postgres
-  - psql -c "CREATE USER homestead WITH PASSWORD 'secret';" -U postgres
+  - psql -c "CREATE USER mike WITH PASSWORD '';" -U postgres
 
 script:
   - mkdir -p build/logs
