--- a/composer.json
+++ b/composer.json
@@ -10,24 +10,22 @@
     ],
     "require": {
         "genealabs/laravel-pivot-events": "*",
-        "illuminate/cache": "5.8.*",
-        "illuminate/config": "5.8.*",
-        "illuminate/console": "5.8.*",
-        "illuminate/container": "5.8.*",
-        "illuminate/database": "5.8.*",
-        "illuminate/support": "5.8.*",
-        "illuminate/http": "5.8.*",
-        "php": "^7.1.3"
+        "illuminate/cache": "5.8 - 6.0",
+        "illuminate/config": "5.8 - 6.0",
+        "illuminate/console": "5.8 - 6.0",
+        "illuminate/container": "5.8 - 6.0",
+        "illuminate/database": "5.8 - 6.0",
+        "illuminate/support": "5.8 - 6.0",
+        "illuminate/http": "5.8 - 6.0"
     },
     "require-dev": {
         "fzaninotto/faker": "*",
         "mockery/mockery": "*",
-        "orchestra/database": "3.8.*",
-        "orchestra/testbench-browser-kit": "3.8.*",
-        "orchestra/testbench": "3.8.*",
+        "orchestra/testbench-browser-kit": "3.9.x-dev@dev",
+        "orchestra/testbench": "3.9.x-dev@dev",
         "php-coveralls/php-coveralls" : "*",
         "phpmd/phpmd": "*",
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "*",
         "predis/predis": "*",
         "sebastian/phpcpd": "*",
         "symfony/thanks": "*"
@@ -52,5 +50,7 @@
                 "GeneaLabs\\LaravelModelCaching\\Providers\\Service"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
