--- a/composer.json
+++ b/composer.json
@@ -20,16 +20,16 @@
     },
     "require-dev": {
         "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "*",
+        "mockery/mockery": "^1.3",
         "orchestra/testbench-browser-kit": "^4.0",
         "orchestra/testbench": "^4.0",
-        "php-coveralls/php-coveralls" : "*",
-        "phpmd/phpmd": "*",
+        "php-coveralls/php-coveralls" : "^2.2",
+        "phpmd/phpmd": "^2.7",
         "phpunit/phpunit": "^8.0",
-        "predis/predis": "*",
-        "sebastian/phpcpd": "*",
+        "predis/predis": "^1.1",
+        "sebastian/phpcpd": "^4.1",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/thanks": "*"
+        "symfony/thanks": "^1.2"
     },
     "autoload": {
         "psr-4": {
