--- a/composer.json
+++ b/composer.json
@@ -9,25 +9,24 @@
         }
     ],
     "require": {
-        "genealabs/laravel-pivot-events": "^0.2.1",
-        "illuminate/cache": "^6.0",
-        "illuminate/config": "^6.0",
-        "illuminate/console": "^6.0",
-        "illuminate/container": "^6.0",
-        "illuminate/database": "^6.0",
-        "illuminate/http": "^6.0",
-        "illuminate/support": "^6.0"
+        "php": ">=7.2.5",
+        "genealabs/laravel-pivot-events": "^0.3.0",
+        "illuminate/cache": "^7.0",
+        "illuminate/config": "^7.0",
+        "illuminate/console": "^7.0",
+        "illuminate/container": "^7.0",
+        "illuminate/database": "^7.0",
+        "illuminate/http": "^7.0",
+        "illuminate/support": "^7.0",
+        "predis/predis": "^1.1"
     },
     "require-dev": {
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.3",
-        "orchestra/testbench-browser-kit": "^4.0",
-        "orchestra/testbench": "^4.0",
+        "fzaninotto/faker": "^1.9.1",
+        "orchestra/testbench-browser-kit": "^5.0",
+        "orchestra/testbench": "^5.0",
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.7",
         "phpunit/phpunit": "^8.0",
-        "predis/predis": "^1.1",
-        "sebastian/phpcpd": "^4.1",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/thanks": "^1.2"
     },
@@ -51,5 +50,7 @@
                 "GeneaLabs\\LaravelModelCaching\\Providers\\Service"
             ]
         }
-    }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
