--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.7",
         "phpunit/phpunit": "^8.0",
+        "sebastian/phpcpd": "^5.0",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/thanks": "^1.2"
     },
