--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
 before_script:
   - travis_retry composer self-update
   - travis_retry composer config --global github-protocols https
-  - travis_retry composer config http-basic.nova.laravel.com ${NOVA_USERNAME} ${NOVA_PASSWORD}
+  - travis_retry composer config http-basic.nova.laravel.com $NOVA_USERNAME $NOVA_PASSWORD
   - travis_retry composer install --no-interaction --prefer-source
   - psql -c "CREATE DATABASE testing;" -U postgres
   - psql -c "CREATE USER homestead WITH PASSWORD 'secret';" -U postgres
