--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ before_script:
   - travis_retry composer config --global github-protocols https
   - travis_retry composer config http-basic.nova.laravel.com $NOVA_USERNAME $NOVA_PASSWORD
   - travis_retry composer install --no-interaction --prefer-source
+  - if php -v | grep -q 'Xdebug'; then phpenv config-rm xdebug.ini; fi
+  - pecl install pcov
   - psql -c "CREATE DATABASE testing;" -U postgres
   - psql -c "CREATE USER homestead WITH PASSWORD 'secret';" -U postgres
 
