--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ matrix:
     - php: 7.4
 
 before_script:
+  - if php -v | grep -q 'Xdebug'; then phpenv config-rm xdebug.ini; fi
+  - pecl install pcov
   - travis_retry composer self-update
   - travis_retry composer config --global github-protocols https
   - travis_retry composer config http-basic.nova.laravel.com $NOVA_USERNAME $NOVA_PASSWORD
