--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_script:
   - travis_retry composer self-update;
   - travis_retry composer config --global github-protocols https;
   - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then travis_retry composer config http-basic.nova.laravel.com $NOVA_USERNAME $NOVA_PASSWORD; fi'
+  - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then composer remove --dev laravel/nova; fi'
   - travis_retry composer install --no-interaction --prefer-source;
   - if php -v | grep -q 'Xdebug'; then phpenv config-rm xdebug.ini; fi
   - pecl install pcov
