--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "phpunit/phpunit": "^8.0",
         "sebastian/phpcpd": "^5.0",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/thanks": "^1.2"
+        "symfony/thanks": "^1.2",
+        "doctrine/dbal": "^2.10"
     },
     "autoload": {
         "psr-4": {
