--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=7.2.5",
+        "php": ">=7.3",
         "genealabs/laravel-pivot-events": "^0.3.0",
         "illuminate/cache": "^7.0",
         "illuminate/config": "^7.0",
@@ -27,8 +27,9 @@
         "predis/predis": "^1.1"
     },
     "require-dev": {
+        "doctrine/dbal": "^2.10",
         "fzaninotto/faker": "^1.9",
-        "laravel/nova": "3.*",
+        "laravel/nova": "^3.0",
         "orchestra/testbench-browser-kit": "^5.0",
         "orchestra/testbench": "^5.0",
         "php-coveralls/php-coveralls" : "^2.2",
@@ -36,8 +37,7 @@
         "phpunit/phpunit": "^8.0",
         "sebastian/phpcpd": "^5.0",
         "squizlabs/php_codesniffer": "^3.4",
-        "symfony/thanks": "^1.2",
-        "doctrine/dbal": "^2.10"
+        "symfony/thanks": "^1.2"
     },
     "autoload": {
         "psr-4": {
