--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -11,14 +11,14 @@
     stopOnFailure="true"
 >
     <testsuites>
-        <testsuite name="Setup">
-            <directory>./tests/AlwaysRunFirstTest.php</directory>
-        </testsuite>
         <testsuite name="Feature">
             <directory suffix="Test.php">./tests/Feature</directory>
         </testsuite>
         <testsuite name="Integration">
             <directory suffix="Test.php">./tests/Integration</directory>
+        </testsuite>
+        <testsuite name="Nova">
+            <directory suffix="Test.php">./tests/Nova</directory>
         </testsuite>
     </testsuites>
     <filter>
