--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -36,6 +36,6 @@
         <env name="DB_CONNECTION" value="sqlite"/>
         <env name="DB_DATABASE" value=":memory:"/>
         <env name="REDIS_HOST" value="127.0.0.1"/>
-        <env name="PGSQL_HOST" value="127.0.0.1"/>
+        <env name="PGSQL_HOST" value="postgres"/>
     </php>
 </phpunit>
