--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,6 +20,7 @@ jobs:
     - uses: harmon758/postgresql-action@v1
       with:
         postgresql version: '11'
+        database: testing
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
