--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -35,7 +35,7 @@
         <env name="QUEUE_DRIVER" value="sync"/>
         <env name="DB_CONNECTION" value="sqlite"/>
         <env name="DB_DATABASE" value=":memory:"/>
-        <env name="REDIS_HOST" value="redis"/>
-        <env name="PGSQL_HOST" value="postgres"/>
+        <env name="REDIS_HOST" value="127.0.0.1"/>
+        <env name="PGSQL_HOST" value="127.0.0.1"/>
     </php>
 </phpunit>
