--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -46,6 +46,10 @@ jobs:
         postgresql user: 'homestead'
         postgresql password: 'secret'    
     
+    - name: Remove Nova on a pull request
+      if: github.event_name == 'pull_request'
+      run: composer remove laravel/nova --no-update --no-interaction
+    
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     
@@ -54,5 +58,9 @@ jobs:
         composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
         composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
     
-    - name: Execute tests (Unit and Feature tests) via PHPUnit
-      run: vendor/bin/phpunit --configuration phpunit.xml.dist
+    - name: Execute Integration and Feature tests via PHPUnit
+      run: vendor/bin/phpunit --configuration phpunit.xml.dist --testsuite Integration,Feature
+
+    - name: Execute Nova tests via PHPUnit
+      if: github.event_name != 'pull_request'
+      run: vendor/bin/phpunit --configuration phpunit.xml.dist --testsuite Nova
