--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [7.2.5, 7.3, 7.4]
+        php: ['^7.2.5', 7.3, 7.4]
     
     name: PHP ${{ matrix.php }}
     
