### Removed PREDIS dependency. Going forward testing will be done against PHPREDIS, as that is installed by default on Laravel Forge servers and the officially  recommended Redis client, since PREDIS is no longer maintained.

--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
         "illuminate/container": "^7.0",
         "illuminate/database": "^7.0",
         "illuminate/http": "^7.0",
-        "illuminate/support": "^7.0",
-        "predis/predis": "^1.1"
+        "illuminate/support": "^7.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.10",
