add laravel support 8.x

--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     "require": {
         "php": ">=7.3",
         "genealabs/laravel-pivot-events": "^0.3.0",
-        "illuminate/cache": "^7.0",
-        "illuminate/config": "^7.0",
-        "illuminate/console": "^7.0",
-        "illuminate/container": "^7.0",
-        "illuminate/database": "^7.0",
-        "illuminate/http": "^7.0",
-        "illuminate/support": "^7.0"
+        "illuminate/cache": "^7.0|^8.0",
+        "illuminate/config": "^7.0|^8.0",
+        "illuminate/console": "^7.0|^8.0",
+        "illuminate/container": "^7.0|^8.0",
+        "illuminate/database": "^7.0|^8.0",
+        "illuminate/http": "^7.0|^8.0",
+        "illuminate/support": "^7.0|^8.0"
     },
     "require-dev": {
         "doctrine/dbal": "^2.10",
