--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,18 @@
         "php": ">=7.1.3"
     },
     "require-dev": {
-        "fzaninotto/faker": "*",
-        "mockery/mockery": "*",
-        "orchestra/database": "3.7.x-dev@dev",
-        "orchestra/testbench-browser-kit": "3.7.*",
-        "orchestra/testbench": "3.7.*",
-        "php-coveralls/php-coveralls" : "*",
-        "phpmd/phpmd": "*",
-        "phpunit/phpunit": "7.*",
-        "predis/predis": "*",
-        "sebastian/phpcpd": "*",
-        "symfony/thanks": "*"
+        "doctrine/dbal": "^2.10",
+        "fzaninotto/faker": "^1.9",
+        "laravel/nova": "^3.0",
+        "orchestra/testbench-browser-kit": "^5.0",
+        "orchestra/testbench": "^5.0",
+        "php-coveralls/php-coveralls" : "^2.2",
+        "phpmd/phpmd": "^2.7",
+        "phpunit/phpunit": "^8.0",
+        "sebastian/phpcpd": "^5.0",
+        "squizlabs/php_codesniffer": "^3.4",
+        "symfony/thanks": "^1.2",
+        "kalnoy/nestedset": "^5.0"
     },
     "autoload": {
         "psr-4": {
