--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     ],
     "require": {
-        "php": ">=7.3",
+        "php": "^7.3|^8.0",
         "genealabs/laravel-pivot-events": "^8.0",
         "illuminate/cache": "^8.0",
         "illuminate/config": "^8.0",
@@ -23,21 +23,22 @@
         "illuminate/container": "^8.0",
         "illuminate/database": "^8.0",
         "illuminate/http": "^8.0",
-        "illuminate/support": "^8.0"
+        "illuminate/support": "^8.0",
+        "slevomat/coding-standard": "^6.4"
     },
     "require-dev": {
         "doctrine/dbal": "^2.10",
-        "fzaninotto/faker": "^1.9",
+        "fakerphp/faker": "^1.11",
         "laravel/nova": "^3.9",
         "orchestra/testbench-browser-kit": "^6.0",
         "orchestra/testbench": "^6.0",
         "php-coveralls/php-coveralls" : "^2.2",
         "phpmd/phpmd": "^2.7",
-        "phpunit/phpunit": "^8.0",
-        "sebastian/phpcpd": "^5.0",
+        "phpunit/phpunit": "^9.0",
         "squizlabs/php_codesniffer": "^3.4",
         "symfony/thanks": "^1.2",
-        "laravel/legacy-factories": "^1.0"
+        "laravel/legacy-factories": "^1.0",
+        "genealabs/php-coding-standards": "^0.1.4"
     },
     "autoload": {
         "psr-4": {
