--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -162,7 +162,7 @@
     "git.allowForcePush": true,
     "git.autofetch": true,
     "git.confirmSync": false,
-    "git.enableCommitSigning": true,
+    "git.enableCommitSigning": false,
     "git.enableSmartCommit": true,
     "git.fetchOnPull": true,
     "git.ignoreRebaseWarning": true,
