--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -56,7 +56,7 @@ jobs:
 
     - name: Install Dependencies
       run: |
-        composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_PASSWORD }}"
+        composer config "http-basic.nova.laravel.com" "${{ secrets.NOVA_USERNAME }}" "${{ secrets.NOVA_LICENSE_KEY }}"
         composer install -q --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
 
     - name: Execute Integration and Feature tests via PHPUnit
